--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <groovy-all.version>2.4.3</groovy-all.version>
         <spock.core.version>1.1-groovy-2.4-rc-3</spock.core.version>
         <spock.reports.version>1.2.9</spock.reports.version>
+        <docker-maven-plugin>0.15.3</docker-maven-plugin>
     </properties>
 
     <dependencies>
@@ -101,12 +102,6 @@
 
     <build>
         <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
-            </plugin>
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
@@ -248,6 +243,28 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>${docker-maven-plugin}</version>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>desafio_cielo</name>
+                            <build>
+                                <dockerFile>Dockerfile</dockerFile>
+                                <assembly>
+                                    <descriptorRef>artifact</descriptorRef>
+                                </assembly>
+                            </build>
+                        </image>
+                    </images>
+                </configuration>
             </plugin>
         </plugins>
     </build>
